--------------------------------------------------------------------------------
drkns 2023-06-27 19:58:03+01:00 - build 6169

1. Using a foreign format exclusively for the clipboard text size was probably not a good idea.
   E.g. now copying text between 6167 and 6168 is broken. Oops.

   To avoid repeating the same mistake in the future, we now have our own format ("FAR_Text_Length")
   and resort to "Notepad++ binary text length" only when our own format is not available.

2. With some magic copying text from pre-6168 should now work.
   Unfortunately, time travel is not yet discovered, so copying text into pre-6168 remains broken.

--------------------------------------------------------------------------------
zg 2023-06-26 20:55:27+03:00 - build 6168

1. correction of 4496. notepad++ expects data size in bytes including final '\0'.

--------------------------------------------------------------------------------
MZK 2023-06-20 19:53:29-07:00 - build 6167

1. More ways to scroll VMenu lists horizontally.
   - Ctrl+Alt+Arrows scroll all items by 20 characters at a time.
   - Ctrl+Shift+Arrows scroll the selected item by 20 characters at a time.
   - Alt+Shift+Home aligns the selected item to the left.
   - Alt+Shift+End aligns the selected item to the right.

--------------------------------------------------------------------------------
drkns 2023-06-20 20:01:57+01:00 - build 6166

1. Configurable cursor size in screen grabber.

--------------------------------------------------------------------------------
johnd0e 2023-06-17 14:55:00+01:00 - build 6165

1. Allow to break directory scan started from a macro (Mantis#0002692).
   Fix by Shmuel: https://github.com/shmuz/far2m/issues/36

--------------------------------------------------------------------------------
drkns 2023-06-14 20:01:09+01:00 - build 6164

1. Subscribe to power events only when needed.

2. Support more reparse tags.

3. Static analysis warnings.

4. Refactoring.
